samples/_failures_safe/1761417198_9526d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6d7fb6e.c: In function ‘main’:
./samples/SAFE/__tmp_c6d7fb6e.c:204: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_c6d7fb6e.c:203:5: error: expected declaration or statement at end of input
  203 |     Token tokens[MAX_TOKENS
      |     ^~~~~
